// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackedBarChart - mouse events Should render callout correctly on mouseover 1`] = `
<div>
  <div
    class=
        ms-StackedBarChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone6"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div
        class=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              justify-content: space-between;
            }
      >
        <div
          class=
              ms-TooltipHost
              {
                color: #323130;
                display: block;
                margin-bottom: 5px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
          role="none"
        >
          <span
            data-is-focusable="false"
            role="text"
            tabindex="-1"
          >
            Stacked bar chart 2nd example
          </span>
          <div
            hidden=""
            id="tooltip7"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          >
            Stacked bar chart 2nd example
          </div>
        </div>
        <div
          data-is-focusable="false"
          role="text"
          tabindex="-1"
        >
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                  font-weight: 600;
                }
          >
            40
          </span>
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                }
          >
             / 63
          </span>
        </div>
      </div>
    </div>
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone8"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Stacked bar chart 2nd example"
          class=

              {
                display: block;
                height: 12px;
                margin-bottom: 10px;
                overflow: visible;
                width: 100%;
              }
          focusable="false"
        >
          <g>
            <g
              aria-label="first Lorem ipsum dolor sit amet, 40."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="0"
            >
              <rect
                fill="#5c005c"
                height="12"
                id="_SBC_bar10"
                rx="0"
                width="63.49206349206349%"
                x="0%"
                y="0"
              />
            </g>
            <g
              aria-label="Winter is coming, 23."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <rect
                fill="#e81123"
                height="12"
                id="_SBC_bar12"
                rx="0"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y="0"
              />
            </g>
          </g>
          <div
            class=
                ms-Callout-container
                {
                  position: relative;
                }
            style=""
          >
            <div
              class=
                  ms-Callout
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    border-radius: 2px;
                    box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
                    box-sizing: border-box;
                    display: flex;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 14px;
                    font-weight: 400;
                    outline: transparent;
                    position: absolute;
                    z-index: 1000000;
                  }
                  @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                    border-color: WindowText;
                    border-style: solid;
                    border-width: 1px;
                  }
                  &::-moz-focus-inner {
                    border: 0px;
                  }
              data-is-focusable="false"
              id="callout0"
              style="opacity: 0; filter: opacity(0); pointer-events: none;"
              tabindex="-1"
            >
              <div
                class=
                    ms-Callout-main
                    {
                      background-color: #ffffff;
                      border-radius: 2px;
                      overflow-x: hidden;
                      overflow-y: auto;
                      position: relative;
                      width: 100%;
                    }
                role="text"
                style="outline: none; max-height: 100%;"
              >
                <div
                  class=

                      {
                        background-blend-mode: normal, luminosity;
                        background-color: #ffffff;
                        display: grid;
                        overflow: hidden;
                        padding-bottom: 10px;
                        padding-left: 16px;
                        padding-right: 16px;
                        padding-top: 11px;
                      }
                >
                  <div
                    class=

                        {
                          display: flex;
                          flex-direction: row;
                          justify-content: space-between;
                        }
                  >
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #605e5c;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: 0.85;
                          }
                    >
                       
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            border-left: 4px solid #5c005c;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 28px;
                            font-weight: 600;
                            line-height: 22px;
                            margin-top: unset;
                            padding-left: 8px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            forced-color-adjust: none;
                          }
                    >
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              color: CanvasText;
                            }
                      >
                        first Lorem ipsum dolor sit amet
                      </div>
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #5c005c;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 28px;
                              font-weight: bold;
                              line-height: 36px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              color: CanvasText;
                            }
                      >
                        40
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackedBarChart - mouse events Should render customized callout on mouseover 1`] = `
<div>
  <div
    class=
        ms-StackedBarChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone6"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div
        class=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              justify-content: space-between;
            }
      >
        <div
          class=
              ms-TooltipHost
              {
                color: #323130;
                display: block;
                margin-bottom: 5px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
          role="none"
        >
          <span
            data-is-focusable="false"
            role="text"
            tabindex="-1"
          >
            Stacked bar chart 2nd example
          </span>
          <div
            hidden=""
            id="tooltip7"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          >
            Stacked bar chart 2nd example
          </div>
        </div>
        <div
          data-is-focusable="false"
          role="text"
          tabindex="-1"
        >
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                  font-weight: 600;
                }
          >
            40
          </span>
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                }
          >
             / 63
          </span>
        </div>
      </div>
    </div>
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone8"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Stacked bar chart 2nd example"
          class=

              {
                display: block;
                height: 12px;
                margin-bottom: 10px;
                overflow: visible;
                width: 100%;
              }
          focusable="false"
        >
          <g>
            <g
              aria-label="first Lorem ipsum dolor sit amet, 40."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="0"
            >
              <rect
                fill="#5c005c"
                height="12"
                id="_SBC_bar10"
                rx="0"
                width="63.49206349206349%"
                x="0%"
                y="0"
              />
            </g>
            <g
              aria-label="Winter is coming, 23."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <rect
                fill="#e81123"
                height="12"
                id="_SBC_bar12"
                rx="0"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y="0"
              />
            </g>
          </g>
          <div
            class=
                ms-Callout-container
                {
                  position: relative;
                }
            style=""
          >
            <div
              class=
                  ms-Callout
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    border-radius: 2px;
                    box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
                    box-sizing: border-box;
                    display: flex;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 14px;
                    font-weight: 400;
                    outline: transparent;
                    position: absolute;
                    z-index: 1000000;
                  }
                  @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                    border-color: WindowText;
                    border-style: solid;
                    border-width: 1px;
                  }
                  &::-moz-focus-inner {
                    border: 0px;
                  }
              data-is-focusable="false"
              id="callout0"
              style="opacity: 0; filter: opacity(0); pointer-events: none;"
              tabindex="-1"
            >
              <div
                class=
                    ms-Callout-main
                    {
                      background-color: #ffffff;
                      border-radius: 2px;
                      overflow-x: hidden;
                      overflow-y: auto;
                      position: relative;
                      width: 100%;
                    }
                role="text"
                style="outline: none; max-height: 100%;"
              >
                <div>
                  <pre>
                    {
  "legend": "first Lorem ipsum dolor sit amet",
  "data": 40,
  "color": "#5c005c"
}
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackedBarChart snapShot testing renders StackedBarChart correctly 1`] = `
<div>
  <div
    class=
        ms-StackedBarChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone6"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div
        class=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              justify-content: space-between;
            }
      >
        <div
          class=
              ms-TooltipHost
              {
                color: #323130;
                display: block;
                margin-bottom: 5px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
          role="none"
        >
          <span
            data-is-focusable="false"
            role="text"
            tabindex="-1"
          >
            Stacked bar chart 2nd example
          </span>
          <div
            hidden=""
            id="tooltip7"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          >
            Stacked bar chart 2nd example
          </div>
        </div>
        <div
          data-is-focusable="false"
          role="text"
          tabindex="-1"
        >
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                  font-weight: 600;
                }
          >
            40
          </span>
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                }
          >
             / 63
          </span>
        </div>
      </div>
    </div>
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone8"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Stacked bar chart 2nd example"
          class=

              {
                display: block;
                height: 12px;
                margin-bottom: 10px;
                overflow: visible;
                width: 100%;
              }
          focusable="false"
        >
          <g>
            <g
              aria-label="first Lorem ipsum dolor sit amet, 40."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="0"
            >
              <rect
                fill="#5c005c"
                height="12"
                id="_SBC_bar3"
                rx="0"
                width="63.49206349206349%"
                x="0%"
                y="0"
              />
            </g>
            <g
              aria-label="Winter is coming, 23."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <rect
                fill="#e81123"
                height="12"
                id="_SBC_bar5"
                rx="0"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y="0"
              />
            </g>
          </g>
          <span
            class="ms-layer"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackedBarChart snapShot testing renders enableGradient correctly 1`] = `
<div>
  <div
    class=
        ms-StackedBarChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone6"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div
        class=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              justify-content: space-between;
            }
      >
        <div
          class=
              ms-TooltipHost
              {
                color: #323130;
                display: block;
                margin-bottom: 5px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
          role="none"
        >
          <span
            data-is-focusable="false"
            role="text"
            tabindex="-1"
          >
            Stacked bar chart 2nd example
          </span>
          <div
            hidden=""
            id="tooltip7"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          >
            Stacked bar chart 2nd example
          </div>
        </div>
        <div
          data-is-focusable="false"
          role="text"
          tabindex="-1"
        >
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                  font-weight: 600;
                }
          >
            40
          </span>
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                }
          >
             / 63
          </span>
        </div>
      </div>
    </div>
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone8"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Stacked bar chart 2nd example"
          class=

              {
                display: block;
                height: 12px;
                margin-bottom: 10px;
                overflow: visible;
                width: 100%;
              }
          focusable="false"
        >
          <g>
            <g
              aria-label="first Lorem ipsum dolor sit amet, 40."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="0"
            >
              <defs>
                <lineargradient
                  id="SBC_Gradient2_0"
                >
                  <stop
                    offset="0"
                    stop-color="#4760D5"
                  />
                  <stop
                    offset="100%"
                    stop-color="#637CEF"
                  />
                </lineargradient>
              </defs>
              <rect
                fill="url(#SBC_Gradient2_0)"
                height="12"
                id="_SBC_bar3"
                rx="0"
                width="63.49206349206349%"
                x="0%"
                y="0"
              />
            </g>
            <g
              aria-label="Winter is coming, 23."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <defs>
                <lineargradient
                  id="SBC_Gradient4_1"
                >
                  <stop
                    offset="0"
                    stop-color="#795AA6"
                  />
                  <stop
                    offset="100%"
                    stop-color="#9373C0"
                  />
                </lineargradient>
              </defs>
              <rect
                fill="url(#SBC_Gradient4_1)"
                height="12"
                id="_SBC_bar5"
                rx="0"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y="0"
              />
            </g>
          </g>
          <span
            class="ms-layer"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackedBarChart snapShot testing renders enabledLegendsWrapLines correctly 1`] = `
<div>
  <div
    class=
        ms-StackedBarChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone6"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div
        class=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              justify-content: space-between;
            }
      >
        <div
          class=
              ms-TooltipHost
              {
                color: #323130;
                display: block;
                margin-bottom: 5px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
          role="none"
        >
          <span
            data-is-focusable="false"
            role="text"
            tabindex="-1"
          >
            Stacked bar chart 2nd example
          </span>
          <div
            hidden=""
            id="tooltip7"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          >
            Stacked bar chart 2nd example
          </div>
        </div>
        <div
          data-is-focusable="false"
          role="text"
          tabindex="-1"
        >
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                  font-weight: 600;
                }
          >
            40
          </span>
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                }
          >
             / 63
          </span>
        </div>
      </div>
    </div>
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone8"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Stacked bar chart 2nd example"
          class=

              {
                display: block;
                height: 12px;
                margin-bottom: 10px;
                overflow: visible;
                width: 100%;
              }
          focusable="false"
        >
          <g>
            <g
              aria-label="first Lorem ipsum dolor sit amet, 40."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="0"
            >
              <rect
                fill="#5c005c"
                height="12"
                id="_SBC_bar3"
                rx="0"
                width="63.49206349206349%"
                x="0%"
                y="0"
              />
            </g>
            <g
              aria-label="Winter is coming, 23."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <rect
                fill="#e81123"
                height="12"
                id="_SBC_bar5"
                rx="0"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y="0"
              />
            </g>
          </g>
          <span
            class="ms-layer"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackedBarChart snapShot testing renders hideDenominator correctly 1`] = `
<div>
  <div
    class=
        ms-StackedBarChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone6"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div
        class=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              justify-content: space-between;
            }
      >
        <div
          class=
              ms-TooltipHost
              {
                color: #323130;
                display: block;
                margin-bottom: 5px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
          role="none"
        >
          <span
            data-is-focusable="false"
            role="text"
            tabindex="-1"
          >
            Stacked bar chart 2nd example
          </span>
          <div
            hidden=""
            id="tooltip7"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          >
            Stacked bar chart 2nd example
          </div>
        </div>
        <div
          data-is-focusable="false"
          role="text"
          tabindex="-1"
        >
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                  font-weight: 600;
                }
          >
            40
          </span>
        </div>
      </div>
    </div>
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone8"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Stacked bar chart 2nd example"
          class=

              {
                display: block;
                height: 12px;
                margin-bottom: 10px;
                overflow: visible;
                width: 100%;
              }
          focusable="false"
        >
          <g>
            <g
              aria-label="first Lorem ipsum dolor sit amet, 40."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="0"
            >
              <rect
                fill="#5c005c"
                height="12"
                id="_SBC_bar3"
                rx="0"
                width="63.49206349206349%"
                x="0%"
                y="0"
              />
            </g>
            <g
              aria-label="Winter is coming, 23."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <rect
                fill="#e81123"
                height="12"
                id="_SBC_bar5"
                rx="0"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y="0"
              />
            </g>
          </g>
          <span
            class="ms-layer"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackedBarChart snapShot testing renders hideLegend correctly 1`] = `
<div>
  <div
    class=
        ms-StackedBarChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone6"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div
        class=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              justify-content: space-between;
            }
      >
        <div
          class=
              ms-TooltipHost
              {
                color: #323130;
                display: block;
                margin-bottom: 5px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
          role="none"
        >
          <span
            data-is-focusable="false"
            role="text"
            tabindex="-1"
          >
            Stacked bar chart 2nd example
          </span>
          <div
            hidden=""
            id="tooltip7"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          >
            Stacked bar chart 2nd example
          </div>
        </div>
        <div
          data-is-focusable="false"
          role="text"
          tabindex="-1"
        >
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                  font-weight: 600;
                }
          >
            40
          </span>
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                }
          >
             / 63
          </span>
        </div>
      </div>
    </div>
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone8"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Stacked bar chart 2nd example"
          class=

              {
                display: block;
                height: 12px;
                margin-bottom: 10px;
                overflow: visible;
                width: 100%;
              }
          focusable="false"
        >
          <g>
            <g
              aria-label="first Lorem ipsum dolor sit amet, 40."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="0"
            >
              <rect
                fill="#5c005c"
                height="12"
                id="_SBC_bar3"
                rx="0"
                width="63.49206349206349%"
                x="0%"
                y="0"
              />
            </g>
            <g
              aria-label="Winter is coming, 23."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <rect
                fill="#e81123"
                height="12"
                id="_SBC_bar5"
                rx="0"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y="0"
              />
            </g>
          </g>
          <span
            class="ms-layer"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackedBarChart snapShot testing renders hideNumberDisplay correctly 1`] = `
<div>
  <div
    class=
        ms-StackedBarChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone6"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div
        class=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              justify-content: space-between;
            }
      >
        <div
          class=
              ms-TooltipHost
              {
                color: #323130;
                display: block;
                margin-bottom: 5px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
          role="none"
        >
          <span
            data-is-focusable="false"
            role="text"
            tabindex="-1"
          >
            Stacked bar chart 2nd example
          </span>
          <div
            hidden=""
            id="tooltip7"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          >
            Stacked bar chart 2nd example
          </div>
        </div>
      </div>
    </div>
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone8"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Stacked bar chart 2nd example"
          class=

              {
                display: block;
                height: 12px;
                margin-bottom: 10px;
                overflow: visible;
                width: 100%;
              }
          focusable="false"
        >
          <g>
            <g
              aria-label="first Lorem ipsum dolor sit amet, 40."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="0"
            >
              <rect
                fill="#5c005c"
                height="12"
                id="_SBC_bar3"
                rx="0"
                width="63.49206349206349%"
                x="0%"
                y="0"
              />
            </g>
            <g
              aria-label="Winter is coming, 23."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <rect
                fill="#e81123"
                height="12"
                id="_SBC_bar5"
                rx="0"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y="0"
              />
            </g>
          </g>
          <span
            class="ms-layer"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackedBarChart snapShot testing renders hideTooltip correctly 1`] = `
<div>
  <div
    class=
        ms-StackedBarChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone6"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div
        class=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              justify-content: space-between;
            }
      >
        <div
          class=
              ms-TooltipHost
              {
                color: #323130;
                display: block;
                margin-bottom: 5px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
          role="none"
        >
          <span
            data-is-focusable="false"
            role="text"
            tabindex="-1"
          >
            Stacked bar chart 2nd example
          </span>
          <div
            hidden=""
            id="tooltip7"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          >
            Stacked bar chart 2nd example
          </div>
        </div>
        <div
          data-is-focusable="false"
          role="text"
          tabindex="-1"
        >
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                  font-weight: 600;
                }
          >
            40
          </span>
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                }
          >
             / 63
          </span>
        </div>
      </div>
    </div>
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone8"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Stacked bar chart 2nd example"
          class=

              {
                display: block;
                height: 12px;
                margin-bottom: 10px;
                overflow: visible;
                width: 100%;
              }
          focusable="false"
        >
          <g>
            <g
              aria-label="first Lorem ipsum dolor sit amet, 40."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="false"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <rect
                fill="#5c005c"
                height="12"
                id="_SBC_bar3"
                rx="0"
                width="63.49206349206349%"
                x="0%"
                y="0"
              />
            </g>
            <g
              aria-label="Winter is coming, 23."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="false"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <rect
                fill="#e81123"
                height="12"
                id="_SBC_bar5"
                rx="0"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y="0"
              />
            </g>
          </g>
          <span
            class="ms-layer"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackedBarChart snapShot testing renders ignoreFixStyle correctly 1`] = `
<div>
  <div
    class=
        ms-StackedBarChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone6"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div
        class=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              justify-content: space-between;
            }
      >
        <div
          class=
              ms-TooltipHost
              {
                color: #323130;
                display: block;
                margin-bottom: 5px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
          role="none"
        >
          <span
            data-is-focusable="false"
            role="text"
            tabindex="-1"
          >
            Stacked bar chart 2nd example
          </span>
          <div
            hidden=""
            id="tooltip7"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          >
            Stacked bar chart 2nd example
          </div>
        </div>
      </div>
    </div>
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone8"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Stacked bar chart 2nd example"
          class=

              {
                display: block;
                height: 12px;
                margin-bottom: 10px;
                overflow: visible;
                width: 100%;
              }
          focusable="false"
        >
          <g>
            <g
              aria-label="first Lorem ipsum dolor sit amet, 40."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="0"
            >
              <rect
                fill="#5c005c"
                height="12"
                id="_SBC_bar3"
                rx="0"
                width="63.49206349206349%"
                x="0%"
                y="0"
              />
            </g>
            <g
              aria-label="Winter is coming, 23."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <rect
                fill="#e81123"
                height="12"
                id="_SBC_bar5"
                rx="0"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y="0"
              />
            </g>
          </g>
          <span
            class="ms-layer"
          />
        </svg>
      </div>
    </div>
    <div
      class=

          {
            margin-bottom: 0px;
            margin-left: 4px;
            margin-right: 0px;
            margin-top: 4px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone9"
                data-tabster="{\\"uncontrolled\\": {}}"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: nowrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="first Lorem ipsum dolor sit amet"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="2"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: #5c005c;
                              border-color: #5c005c;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #5c005c, #5c005c);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        first Lorem ipsum dolor sit amet
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Winter is coming"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="2"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #e81123;
                              border-color: #e81123;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #e81123, #e81123);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Winter is coming
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackedBarChart snapShot testing renders roundCorners correctly 1`] = `
<div>
  <div
    class=
        ms-StackedBarChart
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          width: 100%;
        }
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone6"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div
        class=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              justify-content: space-between;
            }
      >
        <div
          class=
              ms-TooltipHost
              {
                color: #323130;
                display: block;
                margin-bottom: 5px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
          role="none"
        >
          <span
            data-is-focusable="false"
            role="text"
            tabindex="-1"
          >
            Stacked bar chart 2nd example
          </span>
          <div
            hidden=""
            id="tooltip7"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          >
            Stacked bar chart 2nd example
          </div>
        </div>
        <div
          data-is-focusable="false"
          role="text"
          tabindex="-1"
        >
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                  font-weight: 600;
                }
          >
            40
          </span>
          <span
            class=

                {
                  color: #323130;
                  font-size: 14px;
                }
          >
             / 63
          </span>
        </div>
      </div>
    </div>
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone8"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <div>
        <svg
          aria-label="Stacked bar chart 2nd example"
          class=

              {
                display: block;
                height: 12px;
                margin-bottom: 10px;
                overflow: visible;
                width: 100%;
              }
          focusable="false"
        >
          <g>
            <g
              aria-label="first Lorem ipsum dolor sit amet, 40."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="0"
            >
              <rect
                fill="#5c005c"
                height="12"
                id="_SBC_bar3"
                rx="3"
                width="63.49206349206349%"
                x="0%"
                y="0"
              />
            </g>
            <g
              aria-label="Winter is coming, 23."
              class=

                  {
                    cursor: default;
                    opacity: ;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable="true"
              pointer-events="all"
              role="img"
              tabindex="-1"
            >
              <rect
                fill="#e81123"
                height="12"
                id="_SBC_bar5"
                rx="3"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y="0"
              />
            </g>
          </g>
          <span
            class="ms-layer"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
